--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
   <div class="background-emojis" id="emoji-bg"></div>
   <div id="app">
+    <button id="menu-toggle" aria-label="Toggle Menu">☰</button>
     <nav id="sidebar">
       <div class="logo">Energy Domain</div>
       <div id="nav-links">
